--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,23 @@
 	<artifactId>mariadb-java-client</artifactId>
 	<version>1.4.4</version>
     </dependency>
+    <!-- 添加Spring依赖包 -->
+    <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>4.1.9.RELEASE</version>
+    </dependency>
+    <dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-web</artifactId>
+	<version>4.1.9.RELEASE</version>
+    </dependency>
+    <!-- spring-web-mvc依赖包 -->
+    <dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-webmvc</artifactId>
+		<version>4.1.9.RELEASE</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>dreamer</finalName>
