--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,57 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+  <display-name>Dreamer</display-name> 
+  <description>《逐梦者》项目旨在让所有人看病不再难！</description>
+  
+<!-- 加载Spring配置文件 -->
+<context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:spring/applicationContext-*.xml</param-value>
+</context-param>
+
+<!-- 解决post乱码 -->
+<filter>
+    <filter-name>characterEncodingFilter</filter-name>
+    <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+    <init-param>
+        <param-name>encoding</param-name>
+        <param-value>utf-8</param-value>
+    </init-param>
+</filter>
+
+<!-- 配置拦截路径 -->
+<filter-mapping>
+    <filter-name>characterEncodingFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+</filter-mapping>
+
+<!-- 加载spring监听器 -->
+<listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener </listener-class>
+</listener>
+
+<!-- springMvc前端控制器 -->
+<servlet>
+    <servlet-name>dreamerMvc</servlet-name>
+    <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath:spring/springmvc.xml</param-value>
+    </init-param>
+    <!-- 设置启动级别 -->
+    <load-on-startup>1</load-on-startup>
+</servlet>
+<!-- 配置servlet映射路径 -->
+<servlet-mapping>
+    <servlet-name>dreamerMvc</servlet-name>
+    <url-pattern>/</url-pattern>
+</servlet-mapping>
+
+<!-- 欢迎页面 -->
+<welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+</welcome-file-list>
 </web-app>
+
