--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
 
 <web-app>
   <display-name>Dreamer</display-name> 
-  <description>《逐梦者》项目旨在让所有人看病不再难！</description>
+  <description>《逐梦者》在线教育引领者！</description>
   
 <!-- 加载Spring配置文件 -->
 <context-param>
